--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ body{font-family:Arial;background:#f2f2f2;margin:0;text-align:center}
 </div>
 
 <script>
-const sheetURL = "PAhttps://docs.google.com/spreadsheets/d/1P4MjzM0X3I8rYXIwKSvM30_4tVaKaQ5lvxCSn3tqSIA/edit?usp=sharingSTE-CSV-LINK-HERE";
+const sheetURL = "https://docs.google.com/spreadsheets/d/1wNjx22kFG265vQ8-zG18u9fHRIB8BQXSgEAtvzz7YB8/edit?usp=sharing";
 
 const params = new URLSearchParams(window.location.search);
 const id = parseInt(params.get("id") || "1");
